kubernetes/certification/02_cert_for_ingress/istio-gateway-tls.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway-tls
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "ob.34.64.78.98.nip.io"
    tls:
      credentialName: ingress-cert
      mode: SIMPLE
