kubernetes/certification/02_cert_for_ingress/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
  - "ob.34.64.78.98.nip.io"
  gateways:
  - frontend-gateway-tls
  http:
  - route:
    - destination:
        host: frontend
